--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+	font-family: 'Raleway', sans-serif;
+	font-size: 16px;
+	padding: 0;
+	margin: 0;
+	color: black;
+	font-weight: 300;
+	overflow-x: hidden;
+	background-color: #f0f0f0;
+}
